<resources>
    <string name="app_name">Vacvoy</string>
    <string name="name">Name</string>
    <string name="mot_de_passe">Mot de Passe</string>
    <string name="name2">Name</string>
    <string name="pseudo">Pseudo</string>
    <string name="se_connecter_ici">Se connecter ici</string>
    <string name="se_connecter">Se connecter</string>
    <string name="age">Age</string>
    <string name="enregister">Enregister</string>
    <string name="textview">TextView</string>
    <string name="s_enregistrer_ici">s\'enregistrer ici</string>
    <string name="nom_pr_nom">Nom Prénom</string>
    <string name="contact_name">Contact Name</string>
    <string name="email">Email</string>
    <string name="market">Market</string>
    <string name="phone">Phone</string>
    <string name="imageprofil">imageprofil</string>
    <string name="add_contact">Add Contact</string>
    <string name="contact_creator">Contact Creator</string>
    <string name="contact_list">Contact List</string>
    <string name="contact_name1">Contact Name</string>
    <string name="email1">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="action_settings">action_settings</string>
    <string name="action_bold">action_bold</string>
    <string name="previous">previous</string>
    <string name="update">Update</string>
    <string name="welcome">Welcome</string>
    <string name="jeune_padawan">Jeune Padawan</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="padawan">Padawan</string>
    <string name="button">Button</string>
    <string name="prendre_une_photo">Prendre une photo</string>
    <string name="vos_contacts">Vos contacts</string>
    <string name="title_activity_maps">Map</string>
    <string name="se_localiser">Se localiser</string>
    <string name="aventurier">Aventurier</string>
    <string name="bonjour_veuillez_vous_connecter">Bonjour, veuillez vous connecter</string>
    <string name="cr_ez_vous_un_compte">Créez vous un compte</string>
    <string name="capture_image">Capture image</string>
</resources>
