<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.test.thomas.vacvoy.LoginActivity"
    android:background="@drawable/fond_ecran">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/etUsername"
        android:id="@+id/etPassword"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:hint="@string/mot_de_passe"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:layout_marginTop="10dp" />

    <Button
        android:text="@string/se_connecter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="17dp"
        android:id="@+id/bLogin"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:onClick="onButtonClick" />

    <Button
        android:text="@string/s_enregistrer_ici"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvRegisterHere"
        android:layout_below="@+id/bLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:onClick="onButtonClick" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etUsername"
        android:hint="@string/pseudo"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/bonjour_veuillez_vous_connecter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/cast_libraries_material_featurehighlight_text_header_color" />
</RelativeLayout>
