<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.test.thomas.vacvoy.RegisterActivity"
    android:background="@drawable/fond_ecran">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:id="@+id/etName"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:hint="@string/nom_pr_nom"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:layout_marginTop="100dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/etName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:id="@+id/etUsername"
        android:layout_alignParentEnd="true"
        android:hint="@string/pseudo"
        android:background="@color/common_google_signin_btn_text_dark_default" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/etUsername"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:id="@+id/etPassword"
        android:layout_alignParentEnd="true"
        android:hint="@string/mot_de_passe"
        android:background="@color/common_google_signin_btn_text_dark_default" />

    <Button
        android:text="@string/enregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bRegister"
        android:layout_below="@+id/etPassword"
        android:layout_alignParentStart="true"
        android:onClick="onRegisterClick"
        android:layout_marginTop="15dp" />

    <TextView
        android:text="@string/cr_ez_vous_un_compte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:id="@+id/textView5"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textAlignment="center"
        android:textSize="30sp" />
</RelativeLayout>
