<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ListContact">

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tabHost">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:id="@+id/creatorTabs"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:measureWithLargestChild="false"
                    android:longClickable="false">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/contact_creator"
                        android:id="@+id/textView2"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center_horizontal" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:id="@+id/ImgViewCI"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/profil"
                        android:contentDescription="@string/imageprofil" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/TxtName"
                        android:hint="@string/contact_name1"
                        android:layout_marginTop="5dp" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:ems="10"
                        android:id="@+id/TxtPhone"
                        android:hint="@string/phone_number"
                        android:layout_marginTop="15dp" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/TxtMail"
                        android:hint="@string/email1"
                        android:layout_marginTop="15dp"
                        android:inputType="textEmailAddress" />

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_contact"
                        android:id="@+id/btnAdd"
                        android:layout_marginTop="5dp"
                        android:enabled="true" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ContactTab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/contact_list"
                        android:id="@+id/textView"
                        android:layout_marginTop="30dp"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:maxLines="1" />

                    <ListView
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:id="@+id/listView"
                        android:layout_gravity="center_vertical"
                        android:paddingTop="10dp"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="1" />

                    <ScrollView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/scrollView2" />

                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>